infra/k8s/base/depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fftcg-api
  namespace: fftcg-api-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fftcg-api
  template:
    metadata:
      labels:
        app: fftcg-api
    spec:
      restartPolicy: Always
      containers:
      - name: fftcg-api
        image: fftcg-api
        imagePullPolicy: Always
        stdin: true
        tty: true
        ports:
        - containerPort: 3000
          protocol: TCP
          name: http
