infra/k8s/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: fftcg-api
  namespace: fftcg-api-dev
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: fftcg-api
